# pevm

./: .gitignore  Cargo.toml  format_log_sides.py
bins/fetch/src/: main.rs
crates/pevm/: Cargo.toml
crates/pevm/benches/: gigagas.rs  mainnet.rs
crates/pevm/src/: chain.rs  compat.rs  lib.rs  mv_memory.rs  pevm.rs  storage.rs  tx_env.rs  vm.rs
crates/pevm/src/chain/: ethereum.rs  optimism.rs
crates/pevm/src/storage/: rpc.rs
crates/pevm/tests/: beneficiary.rs  mainnet.rs  mixed.rs  raw_transfers.rs  small_blocks.rs  snapshot_data.rs
crates/pevm/tests/common/: mod.rs  runner.rs
crates/pevm/tests/erc20/: contract.rs  main.rs  mod.rs
crates/pevm/tests/ethereum/: main.rs
crates/pevm/tests/uniswap/: contract.rs  main.rs  mod.rs
docs/: bytecode_canonicalization_fix.md  mainnet_zero_tip_beneficiary.md  raw_transfers_same_sender_multiple_txs.md
