[workspace]
default-members = ["crates/pevm"]
members = ["bins/fetch", "crates/pevm"]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["RiseChain Developers <dev@risechain.com>"]
license = "MIT"
categories = ["no-std", "compilers", "cryptography::cryptocurrencies"]
keywords = ["revm", "evm", "ethereum", "blockchain", "no_std"]
repository = "https://github.com/risechain/pevm"
documentation = ""
homepage = ""

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = true

[profile.profiling]
debug = "full"
inherits = "release"
strip = false

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.rust_2018_idioms = "warn"
rust.unreachable_pub = "warn"

[workspace.lints.clippy]
cloned_instead_of_copied = "warn"
derive_partial_eq_without_eq = "warn"
doc_markdown = "warn"
explicit_iter_loop = "warn"
if_not_else = "warn"
if_then_some_else_none = "warn"
match_same_arms = "warn"
missing_const_for_fn = "warn"
redundant_clone = "warn"
redundant_else = "warn"
type_repetition_in_bounds = "warn"
unnested_or_patterns = "warn"
use_self = "warn"

[workspace.dependencies]
revm = { git = "https://github.com/Entropy-Foundation/revm", branch = "pevm-v20", features = ["serde"] }
pevm = { path = "crates/pevm", features = ["full"] }
primitives = { git = "https://github.com/Entropy-Foundation/revm", branch = "pevm-v20", package = "revm-primitives", default-features = false }
bytecode = { git = "https://github.com/Entropy-Foundation/revm", branch = "pevm-v20", package = "revm-bytecode", default-features = false }
database = { git = "https://github.com/Entropy-Foundation/revm", branch = "pevm-v20", package = "revm-database", default-features = false }
database-interface = { git = "https://github.com/Entropy-Foundation/revm", branch = "pevm-v20", package = "revm-database-interface", default-features = false }
state = { git = "https://github.com/Entropy-Foundation/revm", branch = "pevm-v20", package = "revm-state", default-features = false }
interpreter = { git = "https://github.com/Entropy-Foundation/revm", branch = "pevm-v20", package = "revm-interpreter", default-features = false }
inspector = { git = "https://github.com/Entropy-Foundation/revm", branch = "pevm-v20", package = "revm-inspector", default-features = false }
precompile = { git = "https://github.com/Entropy-Foundation/revm", branch = "pevm-v20", package = "revm-precompile", default-features = false }
statetest-types = { git = "https://github.com/Entropy-Foundation/revm", branch = "pevm-v20", package = "revm-statetest-types", default-features = false }
context = { git = "https://github.com/Entropy-Foundation/revm", branch = "pevm-v20", package = "revm-context", default-features = false }
context-interface = { git = "https://github.com/Entropy-Foundation/revm", branch = "pevm-v20", package = "revm-context-interface", default-features = false }
handler = { git = "https://github.com/Entropy-Foundation/revm", branch = "pevm-v20", package = "revm-handler", default-features = false }
paste = "1.0"
phf = { version = "0.11", default-features = false }
auto_impl = "1.2.0"
derive-where = { version = "1.2.7", default-features = false }
enumn = "0.1"
once_cell = { version = "1.19", default-features = false }
aurora-engine-modexp = { version = "1.1", default-features = false }
blst = "0.3.13"
bn = { version = "0.6", package = "substrate-bn", default-features = false }
c-kzg = { version = "1.0.0", default-features = false }
k256 = { version = "0.13.3", default-features = false }
libsecp256k1 = { version = "0.7", default-features = false }
kzg-rs = { version = "0.2.4", default-features = false }
secp256k1 = { version = "0.30", default-features = false }
sha2 = { version = "0.10", default-features = false }
ripemd = { version = "0.1", default-features = false }
p256 = { version = "0.13.2", default-features = false }
cfg-if = { version = "1.0", default-features = false }
alloy-sol-types = { version = "0.8.18", default-features = false }
anyhow = "1.0.89"
eyre = "0.6.12"
hash-db = "0.15"
indicatif = "0.17"
microbench = "0.5"
plain_hasher = "0.2"
rstest = "0.24.0"
serde_derive = "1.0"
triehash = "0.8"

# alloy
alloy-chains = "0.1.54"
alloy-consensus = "0.12.4"
alloy-primitives = { version = "0.8.18", features = ["asm-keccak", "map-fxhash"] }
alloy-provider = "0.12.4"
alloy-rlp = "0.3.10"
alloy-rpc-types-eth = "0.12.4"
alloy-eip2930 = { version = "0.1.0", default-features = false }
alloy-eip7702 = { version = "0.5.0", default-features = false }
alloy-eips = { version = "0.12.4", default-features = false }
alloy-signer = { version = "0.12.4", default-features = false }
alloy-signer-local = { version = "0.12.4", default-features = false }
alloy-transport = "0.12.4"
alloy-transport-http = "0.12.4"
alloy-trie = "0.7.8"

revme = { git = "https://github.com/Entropy-Foundation/revm", branch = "pevm-v20" }

# OP
op-alloy-consensus = "0.9.2"
op-alloy-network = "0.9.2"
op-alloy-rpc-types = "0.9.2"

# Allocators
rpmalloc = { version = "0.2.2", features = ["thread_cache", "global_cache"] }
snmalloc-rs = "0.3.7"
tikv-jemallocator = "0.6.0"

bincode = "1.3.3"
# We can roll our own but [revm] depends on this anyway.
bitflags = "2.7.0"
bitvec = "1.0.1"
clap = { version = "4.5.26", features = ["derive"] }
color-eyre = "0.6.3"
criterion = "0.5.1"
dashmap = "6.1.0"
flate2 = "1.0.35"
hashbrown = "0.15.2"
rand = "0.8.5"
rayon = "1.10.0"
reqwest = "0.12.12"
rustc-hash = "2.1.0"
serde = "1.0.217"
serde_json = "1.0.135"
smallvec = "1.13.2"
thiserror = "2.0.10"
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
walkdir = "2.5.0"

[patch.crates-io]
alloy-consensus = { git = "https://github.com/davidsupra/alloy", branch = "pevm-v20" }
alloy-eips = { git = "https://github.com/davidsupra/alloy", branch = "pevm-v20" }
alloy-serde = { git = "https://github.com/davidsupra/alloy", branch = "pevm-v20" }
