[workspace]
default-members = ["crates/pevm"]
members = ["bins/fetch", "crates/pevm"]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["RiseChain Developers <dev@risechain.com>"]
license = "MIT"
categories = ["no-std", "compilers", "cryptography::cryptocurrencies"]
keywords = ["revm", "evm", "ethereum", "blockchain", "no_std"]
repository = "https://github.com/risechain/pevm"
documentation = ""
homepage = ""

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = true

[profile.profiling]
debug = "full"
inherits = "release"
strip = false

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.rust_2018_idioms = "warn"
rust.unreachable_pub = "warn"

[workspace.lints.clippy]
cloned_instead_of_copied = "warn"
derive_partial_eq_without_eq = "warn"
doc_markdown = "warn"
explicit_iter_loop = "warn"
if_not_else = "warn"
if_then_some_else_none = "warn"
match_same_arms = "warn"
missing_const_for_fn = "warn"
redundant_clone = "warn"
redundant_else = "warn"
type_repetition_in_bounds = "warn"
unnested_or_patterns = "warn"
use_self = "warn"

[workspace.dependencies]
revm = { git = "https://github.com/Entropy-Foundation/revm", branch = "pevm-v26", features = ["serde"] }
pevm = { path = "crates/pevm", features = ["full"] }
primitives = { git = "https://github.com/Entropy-Foundation/revm", branch = "pevm-v26", package = "revm-primitives", default-features = false }
bytecode = { git = "https://github.com/Entropy-Foundation/revm", branch = "pevm-v26", package = "revm-bytecode", default-features = false }
database = { git = "https://github.com/Entropy-Foundation/revm", branch = "pevm-v26", package = "revm-database", default-features = false }
database-interface = { git = "https://github.com/Entropy-Foundation/revm", branch = "pevm-v26", package = "revm-database-interface", default-features = false }
state = { git = "https://github.com/Entropy-Foundation/revm", branch = "pevm-v26", package = "revm-state", default-features = false }
interpreter = { git = "https://github.com/Entropy-Foundation/revm", branch = "pevm-v26", package = "revm-interpreter", default-features = false }
inspector = { git = "https://github.com/Entropy-Foundation/revm", branch = "pevm-v26", package = "revm-inspector", default-features = false }
precompile = { git = "https://github.com/Entropy-Foundation/revm", branch = "pevm-v26", package = "revm-precompile", default-features = false }
statetest-types = { git = "https://github.com/Entropy-Foundation/revm", branch = "pevm-v26", package = "revm-statetest-types", default-features = false }
context = { git = "https://github.com/Entropy-Foundation/revm", branch = "pevm-v26", package = "revm-context", default-features = false }
context-interface = { git = "https://github.com/Entropy-Foundation/revm", branch = "pevm-v26", package = "revm-context-interface", default-features = false }
handler = { git = "https://github.com/Entropy-Foundation/revm", branch = "pevm-v26", package = "revm-handler", default-features = false }
paste = "1.0"
phf = { version = "0.11", default-features = false }
auto_impl = "1.3.0"
derive-where = { version = "1.2.7", default-features = false }
enumn = "0.1"
once_cell = { version = "1.19", default-features = false }
aurora-engine-modexp = { version = "1.1", default-features = false }
blst = "0.3.13"
bn = { version = "0.6", package = "substrate-bn", default-features = false }
c-kzg = { version = "2.1.1", default-features = false }
k256 = { version = "0.13.3", default-features = false }
libsecp256k1 = { version = "0.7", default-features = false }
kzg-rs = { version = "0.2.4", default-features = false }
secp256k1 = { version = "0.30", default-features = false }
sha2 = { version = "0.10", default-features = false }
ripemd = { version = "0.1", default-features = false }
p256 = { version = "0.13.2", default-features = false }
cfg-if = { version = "1.0", default-features = false }
alloy-sol-types = { version = "1.1.2", default-features = false }
anyhow = "1.0.89"
eyre = "0.6.12"
hash-db = "0.15"
indicatif = "0.17"
microbench = "0.5"
plain_hasher = "0.2"
rstest = "0.24.0"
serde_derive = "1.0"
triehash = "0.8"

# alloy
alloy-chains = "0.2.0"
alloy-consensus = { version = "1.0.6", default-features = false }
alloy-primitives = { version = "1.1.2", default-features = false, features = ["asm-keccak", "map-fxhash"] }
alloy-provider = { version = "1.0.6", default-features = false, features = ["reqwest"] }
alloy-rlp = { version = "0.3.12", default-features = false }
alloy-rpc-types-eth = "1.0.6"
alloy-eip2930 = { version = "0.2.1", default-features = false }
alloy-eip7702 = { version = "0.6.1", default-features = false }
alloy-eips = { version = "1.0.0", default-features = false }
alloy-signer = { version = "1.0.6", default-features = false }
alloy-signer-local = { version = "1.0.6", default-features = false }
alloy-transport = { version = "1.0.6", default-features = false }
alloy-transport-http = "1.0.6"
alloy-trie = "0.8.1"

revme = { git = "https://github.com/Entropy-Foundation/revm", branch = "pevm-v26" }

# OP
op-alloy-consensus = "0.20.0"
op-alloy-network = "0.20.0"
op-alloy-rpc-types = "0.20.0"

# Allocators
rpmalloc = { version = "0.2.2", features = ["thread_cache", "global_cache"] }
snmalloc-rs = "0.3.7"
tikv-jemallocator = "0.6.0"

bincode = "1.3"
# We can roll our own but [revm] depends on this anyway.
bitflags = { version = "2.6.0", default-features = false }
bitvec = { version = "1", default-features = false }
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6.3"
criterion = { package = "codspeed-criterion-compat", version = "2.10" }
dashmap = "6.1.0"
flate2 = "1.0.35"
hashbrown = { version = "0.15.2", features = ["serde"] }
rand = "0.8"
rayon = "1.10.0"
reqwest = "0.12.15"
rustc-hash = "2.1.0"
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false }
smallvec = "1.13.2"
thiserror = "2.0"
tokio = { version = "1.44", features = ["rt-multi-thread"] }
walkdir = "2.5"
